[gd_scene load_steps=4 format=3 uid="uid://dw0g1u02v2jl6"]

[ext_resource type="Script" path="res://Scripts/pulse.gd" id="1_6x7uc"]
[ext_resource type="Texture2D" uid="uid://pokcuuvd2sxe" path="res://Assets/Sprites/pulsegradient.png" id="2_armro"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d7rc0"]
radius = 457.246

[node name="Pulse" type="Area2D"]
script = ExtResource("1_6x7uc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d7rc0")

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1, 0)
scale = Vector2(30, 30)
texture = ExtResource("2_armro")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
